feat: routes and encryption
